--- a/style.css
+++ b/style.css
@@ -6,18 +6,32 @@
 }
 
 /* top bar section */
-.topBarTxt{
-    background: #35b5d2;
+
+#logoImg{
+    width:40%;
 }
+.topBarTxt{
+    background: #2271a9;
+}
+
 #sloganOne{
     text-align: center;
     color: #fff;
     padding-bottom:5px;
     padding-top: 5px;
+    font-weight: bold;
+    letter-spacing: 1px;
     margin-bottom:0;
-}
-#sloganOne h5 {
     margin-top: 0!important;
+}
+
+#phoneTop{
+    /* 00344D */
+    color: #00344D;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: right;
+    margin-top: 30px;
 }
 
 /* My code form slider and form  */
@@ -28,7 +42,7 @@
     background: #BABABA; 
 }
 
-sliderStyle{
+#sliderStyle{
     margin: 30px 0;
 }
 .slider.slider-horizontal {
