--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     font-size: 20px;
     font-weight: bold;
     text-align: right;
-    margin-top: 0px;
+    margin-top: 20px;
 }
 
 /* My code form slider and form  */
@@ -267,19 +267,33 @@ body, .action-button {
 /* Responsive Css */
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+   
+    #phoneTop {
+        margin-top: 5px;
+        font-size: 14px;
+    }
+
     #msform fieldset{
         margin: 0;
         width: 100%;
     }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {...} 
+@media only screen and (min-width: 600px) {
+
+} 
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {...} 
+@media only screen and (min-width: 768px) {
+
+} 
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {...} 
+@media only screen and (min-width: 992px) {
+
+} 
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {...}
+@media only screen and (min-width: 1200px) {
+    
+}
